<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    tools:context=".presentation.GameFinishedFragment"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/game_over"
            tools:srcCompat="@drawable/ic_smile"
            />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/required_score"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_answers"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/required_percentage"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_score_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/score_percentage"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_res_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdsd"
            />
    </LinearLayout>
</ScrollView>


    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        />

</LinearLayout>
